Frontend/reminders/src/main.css
/* ... */
.selected .item-options {
    height: 2.5rem;
    padding: 0.3rem 0.3rem;
}

.option-button {
    padding: 0.4em 0.8em;
    margin-top: 0.6em;
    margin-bottom: 0.6em;
}

/* FAB */

.fab {
    color: var(--on-secondary);
    background-color: var(--secondary);
    box-shadow: 0px 1px 5px 0px var(--shadow-dark);
    font-size: 2.5rem;
    border-radius: 50%;
    width: 3.5rem;
    height: 3.5rem;
    position: fixed;
    right: 1.5rem;
    bottom: 1.5rem;
    z-index: 10000;
    transition: background-color 0.1s;
    cursor: pointer;
    contain: strict;
}

.fab:focus {
    border: 1.5px solid var(--outline-focus-light);
    outline: none;
}

.fab:hover {
    background-color: var(--secondary-darkish);
}

.fab:active {
    border: 1.5px solid var(--outline-faint);
    background-color: var(--secondary-dark);
}

.undo {
    background-color: var(--background-dark);
    box-shadow: 0px 1px 5px 0px var(--shadow-dark);
    border-radius: 0.5rem;
    position: fixed;
    padding: 0.1rem;
    left: 1.5rem;
    bottom: 1.5rem;
    z-index: 10000;
    transition: background-color 0.1s, opacity 0.2s;
    contain: content;
}

.dismiss-button,
.undo-button {
    font-size: 1.4rem;
    color: var(--on-secondary);
    margin: 0.1rem;
    padding: 0.5rem 0.3rem;
    border-radius: 0.3rem;
}

.dismiss-button:focus,
.undo-button:focus {
    outline: none;
    background-color: var(--background-darkish);
}

.dismiss-button:active,
.undo-button:active {
    background-color: var(--background-darker);
}

.undo-hidden {
    opacity: 0;
    pointer-events: none;
}

/* Short height e.g. mobile, keyboard open layout */

@media only screen and (max-height: 400px) {
    .login-header {
        display: none;
    }

    .modal-container {
        background-color: var(--secondary);
        pointer-events: auto;
        justify-content: flex-start;
        animation: modal-container-background-enter var(--modal-animation-length);
        overflow: auto;
    }
    @keyframes modal-container-background-enter {
        from {
            overflow: hidden;
            background-color: var(--transparent);
        }
        to {
            overflow: hidden;
            background-color: var(--secondary);
        }
    }

    .modal-exit .modal-container,
    .modal-exit .modal-container.create,
    .modal-exit .modal-container.edit {
        animation: modal-container-background-exit var(--modal-exit-animation-length);
    }
    @keyframes modal-container-background-exit {
        from {
            background-color: var(--secondary);
            overflow: hidden;
        }
        to {
            overflow: hidden;
            background-color: var(--transparent);
        }
    }

    .login-container {
        background-color: var(--secondary);
        height: 100vh;
    }

    .modal-form {
        box-shadow: none;
        border: none;
        padding: 0.8rem 0.3rem;
    }
}

/* Desktop layout */

@media only screen and (min-width: 900px) {
    .modal-container.create {
        animation: modal-container-enter-create var(--modal-animation-length);
    }
    @keyframes modal-container-enter-create {
        from {
            width: 3.5rem;
            height: 3.5rem;
            border-radius: 1.75rem;
            right: 1.5rem;
            bottom: 1.5rem;
            padding: 0;
        }
        to {
            width: 100vw;
            height: 100vh;
            border-radius: 0;
            right: 0;
            bottom: 0;
            padding: 0 0.5rem;
        }
    }

    /* Don't do expand animation for create on desktop */
    .create .modal-form {
        animation: none;
    }
    .modal-exit .modal-form {/* don't break CSS priorities */
        animation: modal-form-exit var(--modal-exit-animation-length);
    }

    .menu-container {
        contain: content;
    }

    .menu-shadow {
        display: none;
    }

    .menu-spacer {
        display: block;
        width: 0;
        height: 100%;
        transition: width 0.2s ease-out;
        will-change: width;
    }

    .menu-show .menu-spacer {
        width: 14rem;
        margin-right: 1rem;
    }

    .menu {
        width: 14rem;/* if change this, remember to change touch gesture code */
        left: -14rem;
        transition: left 0.2s ease-out, opacity 0.01s linear 0.2s;
        will-change: left, opacity;
        z-index: auto;
    }

    .menu-show .menu {
        transition: left 0.2s ease-out, opacity 0.01s linear;
    }

    .todo-container {
        flex-direction: row;
        width: 100vw;
        min-width: auto;
    }

    .desktop-pad.todo-section {
        padding: 0 1rem;
    }

    .desktop-animate-horizontal.section-enter {
        animation: horiz-section-enter 0.5s;
    }
    @keyframes horiz-section-enter {
        0% {
            max-width: 0vw;
            opacity: 0;
            padding: 0;
        }
        30% {
            padding: 0 1rem;
        }
        100% {
            max-width: 100vw;
            opacity: 1;
            padding: 0 1rem;
        }
    }

    .desktop-animate-horizontal.section-exit {
        animation: horiz-section-exit 0.5s linear;
    }
    @keyframes horiz-section-exit {
        0% {
            max-width: 100vw;
            opacity: 1;
            padding: 0 1rem;
        }
        70% {
            padding: 0 1rem;
        }
        100% {
            max-width: 0vw;
            opacity: 0;
            padding: 0;
        }
    }

    .modal-form {
        /* prevent reflow during animation */
        width: 35rem;
    }

    .login-title {
        font-size: 3.2rem;
    }

    .login-logo {
        width: 7rem;
        height: 7rem;
    }
}

